# terrain-generator

./: .gitignore  CMakeLists.txt  README.md  a.out  m  main.cpp  new.py  perlin_noise.pgm  todo
.cache/clangd/index/: camera.cpp.8A9063CCC4476EA4.idx  camera.cpp.CDD5C23A10F5EE56.idx  camera.h.D0ED1C5B71F05652.idx  camera.h.D9CEB85F553A36F7.idx  main.cpp.ABAF3774115FD8D7.idx  main.cpp.FE33B7A85734C56D.idx  noise_gen.h.288DB2FF81896B4D.idx  noise_gen.h.45CD96547AB53D25.idx  perlin.cpp.7BCFA34984BC53BE.idx  perlin.cpp.89A2663636BB1B48.idx  perlin.h.5D487E4BC9D6FF34.idx  perlin.h.EDF388DBC4DC47D3.idx  shader.cpp.063D5FCC478155B6.idx  shader.cpp.E1408786A2991308.idx  shader.h.7538D1B854A12BE0.idx  shader.h.A880D3C3E35709BD.idx  terrain.cpp.28DA71E7209690C7.idx  terrain.cpp.D7C060896BA95234.idx  terrain.h.7744C7B2C85D5E9A.idx  terrain.h.CE94447AA8A86C21.idx  utility.cpp.7F2D1BADF3D9E177.idx  utility.cpp.DD694AE265ECCDE9.idx  utility.h.2C880537FF345344.idx  utility.h.DA034E8661F63956.idx  vec2.cpp.C5727003F22DE6E4.idx  vec2.cpp.FD3DD75EFBC9A86E.idx  vec2.h.5C0869AFCAAD0AED.idx  vec2.h.D4745BBBFF1DE972.idx
events/: ]  event.hpp  event_handler.hpp  event_manager.cpp  event_manager.hpp  input.hpp  key.hpp  key_event.hpp  key_events.hpp  keyboard_event.hpp  mouse_event.hpp  terrain_mod_event.hpp  terrain_parameter_event.hpp  window_events.hpp
include/: application.hpp  camera.h  camera.hpp  chunk.h  chunk.hpp  cube.hpp  drawable.hpp  event_manager.h  fbm.h  fbm.hpp  noise.h  noise_gen.h  perlin.h  perlin.hpp  shader.h  shader.hpp  terrain.h  terrain.hpp  terrain_params.h  terrain_params.hpp  terrain_renderer.h  terrain_renderer.hpp  texture.hpp  usings.hpp  utility.h  utility.hpp  vec2.h  vertex.h  vertex.hpp  window.hpp
shaders/: frag.glsl  fragment.glsl  geometry.glsl  normals_geometry.glsl  normals_vert.glsl  vert.glsl  vertex.glsl  wire_frag.glsl
src/: .main.cpp.swp  a.out  application.cpp  camera.cpp  chunk.cpp  cube.cpp  fbm.cpp  grass.h  main.cpp  perlin.cpp  shader.cpp  terrain.cpp  terrain_params.cpp  terrain_renderer.cpp  texture.cpp  utility.cpp  vec2.cpp  vertex.cpp  window.cpp
